# 2026-Rover-Code

./: .gitignore  LISCENCE  README.html  README.md
.devcontainer/: devcontainer.json
config/drive/: drive_config.yaml
docker/: dev.Dockerfile  docker-compose.yml  nano.Dockerfile  orin.Dockerfile
docs/: coding_standards.md  drive_hardware_setup.md
ros2_ws/docker/: dev.Dockerfile  docker-compose.yml  nano.Dockerfile  orin.Dockerfile
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/arm/share/arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/autonomy/share/autonomy/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/comms/share/comms/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/drive/lib/drive/: drive_controller_node  drive_controller_sim  drive_test_node
ros2_ws/install/drive/share/drive/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/drone/share/drone/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/arm/: CMakeLists.txt  package.xml
ros2_ws/src/arm/config/: arm_config.yaml
ros2_ws/src/arm/launch/: launch.py
ros2_ws/src/autonomy/: package.xml
ros2_ws/src/drive/: CMakeLists.txt  README.md  XBOX_CONTROLLER.md  package.xml
ros2_ws/src/drive/src/: drive_controller.cpp  drive_controller_sim.cpp  drive_test.cpp  xbox_controller_node.cpp
ros2_ws/src/drone/: CMakeLists.txt
ros2_ws/src/drone_bringup/: CMakeLists.txt
ros2_ws/src/perception/: package.xml  setup.py
ros2_ws/src/simulation/: package.xml
ros2_ws/src_new/arm/: package.xml
ros2_ws/src_new/autonomy/: CMakeLists.txt
ros2_ws/src_new/comms/: CMakeLists.txt  package.xml
ros2_ws/src_new/rover_bringup/: CMakeLists.txt  package.xml
ros2_ws/src_new/science/: CMakeLists.txt  package.xml
ros2_ws/src_new/simulation/: CMakeLists.txt
scripts/: setup.sh
(+83 files in other folders)
